# ras-weather

./: README.md
database/: 1_piweather.sqlite3  2_piweather.sqlite3  Readme.txt
docs/: Grafiken.vsdx  Grobentwurf.eap  Projektdokumentation-Wetterstation-backup.docx  Projektdokumentation-Wetterstation.docx  Präsentation-Wetterstation.pptx  Web-Mockup.xml
docs/02-software-on-pi/: 02-software-on-pi.bib  02-software-on-pi.tex  Makefile  class-diagram.dia  class-diagram.eps  sequence-diagram.uxf  sequence-startup-running.eps  sequence-startup-running.uxf  sequence-store-periodic.eps  sequence-store-periodic.uxf
piweather/: .gitignore  Makefile.am  README  configure.ac  piweather-0.1.bin.files  schema.sql
piweather/src/: Application.cpp  Application.hpp  Configuration.cpp  Configuration.hpp  Observer.hpp  piw-daemon.cpp
piweather/src/app/: AbortableTimer.cpp  AbortableTimer.hpp  Application.cpp  Application.hpp  AsyncTimer.cpp  AsyncTimer.hpp  ConfigCollector.cpp  ConfigCollector.hpp  ConfigReader.cpp  ConfigReader.hpp  Configuration.cpp  Configuration.hpp  SignalHandler.cpp  SignalHandler.hpp  daemon.cpp  piweather.cpp
piweather/src/db/: Database.cpp  Database.hpp  Values.hpp
piweather/src/device/: Button.cpp  Button.hpp  ConnectedDevice.cpp  ConnectedDevice.hpp  Connection.cpp  Connection.hpp  IpAddress.cpp  IpAddress.hpp  Lcd.cpp  Lcd.hpp  Observable.cpp  Observable.hpp  Observer.hpp  UidRegistry.cpp  UidRegistry.hpp
piweather/src/sensors/: Barometer.cpp  Barometer.hpp  Humidity.cpp  Humidity.hpp  Illuminance.cpp  Illuminance.hpp  IpAddress.cpp  IpAddress.hpp  SensorDevice.hpp  Temperature.cpp  Temperature.hpp  ThresholdObservable.hpp
piweather/src/util/: DateConverter.cpp  DateConverter.hpp
piweather/src/view/: AirPressure.cpp  AirPressure.hpp  Dimensions.cpp  Dimensions.hpp  ErrorView.cpp  ErrorView.hpp  Humidity.cpp  Humidity.hpp  Illuminance.cpp  Illuminance.hpp  IpView.cpp  IpView.hpp  Lcd.cpp  Lcd.hpp  LcdView.cpp  LcdView.hpp  Temperature.cpp  Temperature.hpp  Viewable.hpp  WeatherView.hpp
web/: druck.php  druck_graph.php  feuchtigkeit.php  feuchtigkeit_graph.php  index.php  lichtstaerke.php  lichtstaerke_graph.php  menu.php  site.css  temperatur.php  temperatur_graph.php
web/_vti_cnf/: druck.php  druck_graph.php  feuchtigkeit.php  feuchtigkeit_graph.php  index.php  lichtstaerke.php  lichtstaerke_graph.php  menu.php  site.css  temperatur.php  temperatur_graph.php
web/_vti_pvt/: deptodoc.btr  doctodep.btr  linkinfo.btr  service.cnf  structure.cnf
web/classes/: databasehandler.php
web/classes/_vti_cnf/: databasehandler.php
